Icon & Meta tags & design change for mobile device

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description" content="TIC-TAC-TOE" />
+    <meta name="keywords" content="tic-tac-toe, React, JavaScript" />
+    <meta name="author" content="MSI" />
+
+    <meta property="og:title" content="TIC-TAC-TOE" />
+    <meta property="og:description" content="The tic-tac-toe game by React JS" />
+    <meta property="og:image" content="/images/tic-tac-toe.png" />
+
+    <link rel="icon" type="image/png" href="/icon.png" />
+
     <title>TIC-TAC-TOE</title>
   </head>
   <body class="dark:bg-slate-900 dark:text-white bg-main font-sans antialiased">
